fixed the image stretch on large screens

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -16,6 +16,7 @@
 .gallery-image {
     width: 22vw;
     height: 40vh;
+    max-height: 400px;
 }
 
 .gallery-image:hover {
